# task_tracker_fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1179052860df_tasks_create.py
app/: main.py
app/api/: task.py
app/core/: settings.py
app/db/: base.py  models.py
app/templates/: edit_task.html  index.html  task_detail.html  task_item.html
